--- a/Monolith.Module1/Monolith.Module1.csproj
+++ b/Monolith.Module1/Monolith.Module1.csproj
@@ -14,7 +14,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Monolith.Module1.Shared\Monolith.Module1.Shared.csproj" />
-        <ProjectReference Include="..\Monolith.Shared\Monolith.Shared.csproj" />
+        <ProjectReference Include="..\Monolith.Shared\Module.Shared.csproj" />
     </ItemGroup>
 
 </Project>
