--- a/Monolith.Host/appsettings.json
+++ b/Monolith.Host/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=ModularIdentity;Integrated Security=True;MultipleActiveResultSets=True"
+    
+  }
 }
