--- a/src/Module.Host/Properties/launchSettings.json
+++ b/src/Module.Host/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ModularMonolith": {
+    "ModularModule": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
