--- a/Module.Module1/Module.Module1.csproj
+++ b/Module.Module1/Module.Module1.csproj
@@ -13,8 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Monolith.Module1.Shared\Module.Module1.Shared.csproj" />
-        <ProjectReference Include="..\Monolith.Shared\Module.Shared.csproj" />
+        <ProjectReference Include="..\Module.Module1.Shared\Module.Module1.Shared.csproj" />
+        <ProjectReference Include="..\src\Module.Shared\Module.Shared.csproj" />
     </ItemGroup>
 
 </Project>
