--- a/src/Identity/Module.Identity.Core.Contracts/Module.Identity.Core.Contracts.csproj
+++ b/src/Identity/Module.Identity.Core.Contracts/Module.Identity.Core.Contracts.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Monolith.Shared\Module.Shared.csproj" />
+    <ProjectReference Include="..\..\..\Module.Shared\Module.Shared.csproj" />
   </ItemGroup>
 
 </Project>
