--- a/src/Identity/Module.Identity.Core/Module.Identity.Core.csproj
+++ b/src/Identity/Module.Identity.Core/Module.Identity.Core.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Monolith.Shared\Module.Shared.csproj" />
+    <ProjectReference Include="..\..\Module.Shared\Module.Shared.csproj" />
   </ItemGroup>
 
 </Project>
