--- a/src/Identity/Module.Identity/Module.Identity.csproj
+++ b/src/Identity/Module.Identity/Module.Identity.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Monolith.Shared\Module.Shared.csproj" />
+    <ProjectReference Include="..\..\Module.Shared\Module.Shared.csproj" />
     <ProjectReference Include="..\Module.Identity.Core\Module.Identity.Core.csproj" />
     <ProjectReference Include="..\Module.Identity.Infrastructure\Module.Identity.Infrastructure.csproj" />
   </ItemGroup>
