Serilog and Asp.Net identity token generation, authentication

--- a/src/Module.Host/appsettings.json
+++ b/src/Module.Host/appsettings.json
@@ -1,14 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "restrictedToMinimumLevel": null,
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "restrictedToMinimumLevel": "Information"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Modular Monolithic"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IdentityConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=ModularIdentity;Integrated Security=True;MultipleActiveResultSets=True"
-    
+
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000",
+    "Key": "This is a secret key"
   }
 }
