--- a/src/Identity/Module.Identity/Module.Identity.csproj
+++ b/src/Identity/Module.Identity/Module.Identity.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Module.Shared\Module.Shared.csproj" />
     <ProjectReference Include="..\Module.Identity.Core\Module.Identity.Core.csproj" />
     <ProjectReference Include="..\Module.Identity.Infrastructure\Module.Identity.Infrastructure.csproj" />
