Changed name of of the identity project

--- a/src/Module.Host/Module.Host.csproj
+++ b/src/Module.Host/Module.Host.csproj
@@ -8,7 +8,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\Module.Module1\Module.Module1.csproj" />
         <ProjectReference Include="..\..\Module.Module2\Module.Module2.csproj" />
-        <ProjectReference Include="..\Identity\Module.Identity\Module.Identity.csproj" />
+        <ProjectReference Include="..\Identity\Module.Identity\Module.Identity.WebApi.csproj" />
     </ItemGroup>
 
     <ItemGroup>
