--- a/src/Module.Shared/Module.Shared.csproj
+++ b/src/Module.Shared/Module.Shared.csproj
@@ -8,4 +8,9 @@
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
