--- a/src/Module.Host/appsettings.json
+++ b/src/Module.Host/appsettings.json
@@ -16,7 +16,7 @@
       }
     ],
     "Properties": {
-      "Application": "Modular Monolithic"
+      "Application": "Modular Monolithic  Application"
     }
   },
   "AllowedHosts": "*",
