Update .NET version from 6 to 9

--- a/src/Module.Host/appsettings.json
+++ b/src/Module.Host/appsettings.json
@@ -27,6 +27,6 @@
   "Jwt": {
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000",
-    "Key": "This is a secret key"
+    "Key": "This is a secret key used for jwt. This is a secret key used for jwt."
   }
 }
